Fix an alignment issue

--- a/style.css
+++ b/style.css
@@ -235,7 +235,8 @@ body {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.06);
     position: relative;
     font-family: 'Arial', sans-serif;
-    /* height: 350px; */
+    width: 230px;
+    height: 270px;
 }
 
 .custom-account-bar {
